Working on blocks and indexation

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
   <title>TripTrip</title>
   <link rel="icon" href="data:;base64,iVBORw0KGgo=">
   <script type="module" src="/ts/App.js"></script>
+  
+  <link rel="stylesheet" href="/css/style.css">
+
 </head>
 <body>
   
